<resources>
    <string name="app_name">proyectoFinalDAUTE</string>
    <string name="title_activity_navigation_daute">Navigation_DAUTE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sistemas Informaticos </string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Cerrar Sesion</string>
        <string name="Regresar">Regresar</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_actualizar">Actualizar Perfil</string>
    <string name="menu_eliminar">Eliminar Perfil</string>
    <string name="menu_categorias">Agregar Categorias</string>
    <string name="menu_productos">Agregar Productos</string>
    <string name="menu_modificar_productos">Modificar Productos</string>
    <string name="edit">Editar</string>
    <string name="update">Actualizar</string>
    <string-array name="estadoCategorias">
        <item>Seleccione estado categoria</item>
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="estadoProductos">
        <item>Seleccione estado productos</item>
        <item>1</item>
        <item>0</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>