<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_actualizar"
            android:icon="@drawable/ic_actualizar"
            android:title="@string/menu_actualizar" />

        <item
            android:id="@+id/nav_eliminar_perfil"
            android:icon="@drawable/ic_eliminar"
            android:title="@string/menu_eliminar" />

        <item
            android:id="@+id/nav_categorias"
            android:icon="@drawable/ic_categorias"
            android:title="@string/menu_categorias" />

        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_categorias"
            android:title="@string/menu_productos" />
    </group>
</menu>