<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyectofinaldaute.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_categorias"
        android:name="com.example.proyectofinaldaute.ui.Categorias.categorias"
        android:label="@string/menu_categorias"
        tools:layout="@layout/fragment_categorias" />

    <fragment
        android:id="@+id/nav_productos"
        android:name="com.example.proyectofinaldaute.ui.Productos.productos"
        android:label="@string/menu_productos"
        tools:layout="@layout/fragment_productos" />


</navigation>